<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <!--
     Copyright (C) 2006 Joe Walnes.
     Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2017 XStream committers.
     All rights reserved.
     
     The software in this package is published under the terms of the BSD
     style license a copy of which has been included with this distribution in
     the LICENSE.txt file.
     
     Created on 29. July 2006 by Mauro Talevi
     -->
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.thoughtworks.xstream</groupId>
    <artifactId>xstream-parent</artifactId>
    <version>1.5.0-SNAPSHOT</version>
  </parent>
  <artifactId>xstream</artifactId>
  <packaging>jar</packaging>
  <name>XStream Core</name>

  <dependencies>
    <dependency>
      <groupId>dom4j</groupId>
      <artifactId>dom4j</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.jdom</groupId>
      <artifactId>jdom</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.jdom</groupId>
      <artifactId>jdom2</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>stax</groupId>
      <artifactId>stax</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.codehaus.woodstox</groupId>
      <artifactId>wstx-asl</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>stax</groupId>
      <artifactId>stax-api</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>xom</groupId>
      <artifactId>xom</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>xmlpull</groupId>
      <artifactId>xmlpull</artifactId>
    </dependency>

    <dependency>
      <groupId>net.sf.kxml</groupId>
      <artifactId>kxml2-min</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>net.sf.kxml</groupId>
      <artifactId>kxml2</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>xpp3</groupId>
      <artifactId>xpp3_min</artifactId>
    </dependency>

    <dependency>
      <groupId>cglib</groupId>
      <artifactId>cglib-nodep</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.codehaus.jettison</groupId>
      <artifactId>jettison</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- test-scoped -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>

    <dependency>
      <groupId>jmock</groupId>
      <artifactId>jmock</artifactId>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.megginson.sax</groupId>
      <artifactId>xml-writer</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>oro</groupId>
      <artifactId>oro</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>complete-test-classpath</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <outputDirectory>target/lib</outputDirectory>
              <artifactItems>
                <artifactItem>
                  <groupId>proxytoys</groupId>
                  <artifactId>proxytoys</artifactId>
                  <version>0.2.1</version>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
          <execution>
            <id>collect-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>target/dependencies</outputDirectory>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/AbstractAcceptanceTest.*</include>
              </includes>
              <archive combine.children="append">
                <manifestEntries>
                  <Specification-Title>${project.name} Test</Specification-Title>
                  <Implementation-Title>${project.name} Test</Implementation-Title>
                </manifestEntries>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdk9-ge</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <surefire.argline>--add-modules java.activation,java.xml.bind --illegal-access=${surefire.illegal.access}</surefire.argline>
      </properties>
    </profile>
    <profile>
      <id>jdk18-ge</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <compilerArgs>
                <arg>-XDignore.symbol.file</arg>
              </compilerArgs>
              <excludes>
                <exclude>**/Lambda**</exclude>
                <exclude>**/time/**</exclude>
                <exclude>**/ISO8601JavaTimeConverter.java</exclude>
              </excludes>
              <testExcludes>
                <exclude>**/Lambda**</exclude>
                <exclude>**/*18TypesTest.java</exclude>
              </testExcludes>
            </configuration>
            <executions>
              <execution>
                <id>compile-jdk18</id>
                <configuration>
                  <source>1.8</source>
                  <target>1.8</target>
                  <excludes combine.self="override"/>
                  <textExcludes combine.self="override"/>
                </configuration>
                <goals>
                  <goal>compile</goal>
                  <goal>testCompile</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jdk18</id>
      <activation>
        <jdk>1.8</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <reporting>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${version.plugin.maven.javadoc}</version>
            <configuration>
              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
              <additionalparam>${javadoc.xdoclint}</additionalparam>
              <detectJavaApiLink>false</detectJavaApiLink>
              <source>${version.java.source}</source>
              <links>
                <link>${javadoc.link.javase}</link>
              </links>
            </configuration>
          </plugin>
        </plugins>
      </reporting>
    </profile>
    <profile>
      <id>jdk17</id>
      <activation>
        <jdk>1.7</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <compilerArgs>
                <arg>-XDignore.symbol.file</arg>
              </compilerArgs>
              <excludes>
                <exclude>**/Lambda**</exclude>
                <exclude>**/time/**</exclude>
                <exclude>**/ISO8601JavaTimeConverter.java</exclude>
                <exclude>**/Base64JavaUtilCodec.java</exclude>
              </excludes>
              <testExcludes>
                <exclude>**/Lambda**</exclude>
                <exclude>**/Base64JavaUtilCodecTest.java</exclude>
                <exclude>**/*18TypesTest.java</exclude>
              </testExcludes>
            </configuration>
          </plugin>
          <plugin><!-- required for Maven Central -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <source>1.7</source>
              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${version.plugin.maven.surefire}</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>${version.plugin.mojo.cobertura}</version>
      </plugin>
    </plugins>
  </reporting>

  <properties>
    <bundle.export.package>!com.thoughtworks.xstream.core.util,com.thoughtworks.xstream.*;-noimport:=true</bundle.export.package>
  </properties>

</project>
